--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<img src="img/Bratva.png" alt="Братва" width="800" height="auto" />
-		<h1 align ="center"> Склад Братви</h1>
+		<h1 align "center"> Склад Братви</h1>
 		<ol type="I"> <h2 > <li>Мішаня</li> <li>|Бодя</li> |Олег| Назік|Саня</h2></ol>
 		<h3> Ren 	|Elephant 	|Aligator 	|Pchela 	|The Best</h3> 
 		<h4> Тактичний хід нашого угрупування ...</h4>
